--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ emailnizio sezione elenco emailnizio sezione elenco email-->
 <h2>Powered by my Gmail</h2>
 <p>Questo è un paragrafo</p>
 <p> un altro paragrafo</p>
-
+<p>ancora</p>
 </footer>
 
 
